# doc-chatbot-multi-llm

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  packages.txt  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: deploy-to-huggingface.yml
.streamlit/: config.toml  secrets.toml.example  style.css
docs/: CONTRIBUTING.md  DEPLOYMENT.md
examples/: example_document.txt
src/: __init__.py  chat_handler.py  config.py  document_processor.py  llm_manager.py  platform_utils.py
