[project]
name = "genai-doc-chatbot"
version = "0.1.0"
description = "Multi-LLM Chatbot para Análise de Documentos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.0",
    "groq>=0.11.0",
    "ollama>=0.4.0",  # Included for local development (full multi-LLM support)
                      # Excluded from requirements.txt for cloud deployments (HF Spaces)
    "pypdf>=5.1.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
